--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci.xhtml
@@ -76,7 +76,7 @@
                                     <p:selectBooleanCheckbox id="ponpiat" value="#{nieobecnoscView.selected.ponpiatek}" rendered="#{nieobecnoscView.delegacja}"/>
                                     <p:outputLabel value="Baustelle" for="uwagi" />
 <!--                                    <p:inputText id="uwagi" value="#{nieobecnoscView.selected.krajoddelegowania}" title="Baustelle" />-->
-                                    <p:selectOneMenu id="uwagi" value="#{nieobecnoscView.selected.firmabaustelle}" required="true" requiredMessage="Wybierz baustelle" converter="#{firmabaustelleConverter}">
+                                    <p:selectOneMenu id="uwagi" value="#{nieobecnoscView.selected.firmabaustelle}"  converter="#{firmabaustelleConverter}">
                                         <f:selectItem itemLabel="wybierz" noSelectionOption="true"/>
                                         <f:selectItems value="#{nieobecnoscView.listabaustelle}" 
                                                        var="bsItem"
