naprawa nie generuje z okresowych bo sa korekty

--- a/npkpir_23/web/admin/sub/statystyka.xhtml
+++ b/npkpir_23/web/admin/sub/statystyka.xhtml
@@ -7,6 +7,7 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets">
+    //tu jest kalkulacja księgowych
     <p:outputPanel style="padding: 10px;">
         <h:outputText value="Rok:" style="text-shadow: #6374AB 1px -1px 1px"/>
         <p:selectOneMenu id="rokWpisu" value="#{statisticAdminView.rok}" style="width: 70px;">
