--- a/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
+++ b/npkpir_23/web/manager/sub/podatnikksiegowa.xhtml
@@ -6,7 +6,7 @@
     xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:bcf="http://brzaskun.com/facelets">
-
+    <h:outputText value="Podatnik księgowa"/>
     <h:form id="formpodatnicy">
 
         <p:outputPanel>
