naprawa naprawy wawa 23062024

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wyliczenie_zapisy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilans_wyliczenie_zapisy.xhtml
@@ -30,8 +30,8 @@
                 }
             </script>
                 <p:panelGrid columns="7">
-                    <h:outputText value="#{mgs.nazwaukładu}"/>
-                    <h:outputText value="#{pozycjaBRView.uklad.uklad} - #{pozycjaBRView.uklad.rok}"/>
+<!--                    <h:outputText value="#{mgs.nazwaukładu}"/>
+                    <h:outputText value="#{pozycjaBRView.uklad.uklad} - #{pozycjaBRView.uklad.rok}"/>-->
 <!--                    <p:selectOneMenu value="#{pozycjaBRView.uklad}" converter="#{ukladBRConv}">
                         <f:selectItems value="#{ukladBRView.listarokbiezacy}" var="loop" itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}"/>
                         <p:ajax event="change" listener="#{pozycjaBRView.zmianaukladprzegladBilans()}"/>
