--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilansBO_wyliczenie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_bilansBO_wyliczenie.xhtml
@@ -32,11 +32,12 @@
             </script>
              <p:panelGrid columns="8">
                 <p:panelGrid columns="3">
-                    <h:outputText value="#{mgs.nazwaukładu}"/>
-                    <p:selectOneMenu value="#{pozycjaBRView.uklad}" converter="#{ukladBRConv}">
+                  <h:outputText value="układ: " style="margin-left: 20px;" rendered="#{ukladBRView.listarokbiezacy.isEmpty() eq false}"/>
+                    <h:outputText value="#{pozycjaBRView.uklad.uklad}" style="color: green;" rendered="#{ukladBRView.listarokbiezacy.isEmpty() eq false}"/>
+<!--                    <p:selectOneMenu value="#{pozycjaBRView.uklad}" converter="#{ukladBRConv}">
                         <f:selectItems value="#{ukladBRView.lista}" var="loop" itemLabel="#{loop.uklad} - #{loop.rok}" itemValue="#{String.valueOf(loop.lp)}"/>
                     </p:selectOneMenu>
-                    <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaBRView.obliczBilansOtwarcia()}" update=":formdialog_bilansBO_wyliczenie"/>
+                    <p:commandButton value="#{mgs.wybierzmcrok}" style="width: 120px;" type="submit" actionListener="#{pozycjaBRView.obliczBilansOtwarcia()}" update=":formdialog_bilansBO_wyliczenie"/>-->
                 </p:panelGrid>
 <!--                 <p:commandButton id="rozwinwsz" value="rozwiń wszystkie" actionListener="#{pozycjaBRView.rozwinwszystkie()}" update=":formdialog_bilansBO_wyliczenie:dataList" style="float: left;" />
                  <p:commandButton id="rozwin" value="rozwiń poziom" actionListener="#{pozycjaBRView.rozwin()}" update=":formdialog_bilansBO_wyliczenie:dataList" style="float: left;" />
