naprawa pk z rodzajem dokumentu z innego roku

--- a/npkpir_23/web/manager/sub/tablica.xhtml
+++ b/npkpir_23/web/manager/sub/tablica.xhtml
@@ -126,12 +126,12 @@
          <p:growl />
          <p:commandButton value="poprawsierpien" actionListener="#{fakturaView.poprawsierpien()}" global="true" update="@form"/>
     </h:form> -->
-
 <h:form>
          <p:growl />
-         <p:commandButton value="wsdl" actionListener="#{wsKadryFakturaPozycjaView.init()}" global="true" update="@form"/>
+         <p:commandButton value="rodzajedok" actionListener="#{naprawyView.naprawdokumenty()}" global="true" update="@form"/>
          <p:messages><p:autoUpdate/></p:messages>
-    </h:form> 
+    </h:form>
+c 
 <!--
 <h:form>
          <p:growl />
